feat: 优化阿里云OSS上传服务、用户控制器和IM服务
- 完善 AliYunOssFileUpload 服务，添加视频封面生成和文件管理功能
- 修复 UserController 中默认密码常量引用错误
- 清理 ImService 中未使用的导入
- 更新部署文档中的数据库迁移脚本路径
- 添加 Maven 仓库配置(jitpack.io 和 nexus)
- 调整前端应用 package.json 配置和文件权限

--- a/packages/backend/pom.xml
+++ b/packages/backend/pom.xml
@@ -233,12 +233,6 @@
                 <profile.active>local</profile.active>
             </properties>
         </profile>
-        <profile>
-            <id>ys_local</id>
-            <properties>
-                <profile.active>ys_local</profile.active>
-            </properties>
-        </profile>
         <!-- 生产环境-->
         <profile>
             <id>prod</id>
@@ -329,6 +323,21 @@
             </plugins>
         </pluginManagement>
     </build>
+
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+
+        <repository>
+            <id>nexus</id>
+            <name>snapshots</name>
+            <url>http://nexus.caringsaas.cn/repository/maven-snapshots/</url>
+        </repository>
+    </repositories>
+
+
 
     <!-- 
     <distributionManagement>
