--- a/packages/patient-app/package.json
+++ b/packages/patient-app/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@caring/patient-app",
+  "name": "bpm-app",
   "version": "1.0.0",
-  "description": "慢病管理平台 - 患者端应用",
-  "author": "Caring Team",
+  "description": "bpm mobile project",
+  "author": "jeff",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
@@ -34,13 +34,15 @@
     "babel-loader": "^7.1.1",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-import": "^1.13.1",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "chalk": "^2.0.1",
-    "chromedriver": "^2.27.2",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "cross-spawn": "^5.0.1",
